--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<h1>John Doughty Voice Actor</h1>
-<h2>Good morning afternoon/evening!</h2>
+<h1>JOHN DOUGHTY Voice Actor</h1>
+
+<h2>Good morning/afternoon/evening!</h2>
+
+<h3>Voice Reel</h3>
+<h4>Naturalistic Game Audio</h4>
+<h5>Cartoony Game Audio</h5>
+
