--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 
 <h2>Good morning/afternoon/evening!</h2>
 
-<h3>Voice Reel</h3>
-<h4>Naturalistic Game Audio</h4>
-<h5>Cartoony Game Audio</h5>
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voice Clips by [Your Name]</title>
+    <title>Voice Clips</title>
     <style>
         body {
             font-family: Arial, sans-serif;
