--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="clip">
                 <h2>Voice Reel</h2>
                 <audio controls>
-                    <source src="path/to/your/clip1.mp3" type="audio/mpeg">
+                    <source src="Dusty Road Ringtone.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
