--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<h1>JOHN DOUGHTY Voice Actor</h1>
+<h1>JOHN DOUGHTY 
+    Voice Actor</h1>
 
-<h2>Good morning/afternoon/evening!</h2>
+<h2>Hello!</h2>
 
 <!DOCTYPE html>
 <html lang="en">
