--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<h1>JOHN DOUGHTY 
-    Voice Actor</h1>
+<h1>JOHN DOUGHTY</h1>
+<h2>Voice Actor</h2>
 
-<h2>Hello!</h2>
 
 <!DOCTYPE html>
 <html lang="en">
