--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="clip">
                 <h2>Naturalistic Game Audio</h2>
                 <audio controls>
-                    <source src="path/to/your/clip2.mp3" type="audio/mpeg">
+                    <source src="esting.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
