--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             flex-direction: column;
             align-items: center;
             padding-top: 20px;
-            background-color: #f4f4f4;
+            background-color: #a2d2fb;
         }
         header {
             text-align: center;
