--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         header {
             text-align: center;
             padding: 20px 0;
-            background-color: #333;
+            background-color: #21262d;
             color: white;
             width: 100%;
         }
